# job-offer-processor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: test_flow.yml
data-eng/: pyproject.toml
data-eng/src/data_eng/: __init__.py  adzuna_engine.py  s3_connector.py
data-eng/tests/: test_adzuna_engine.py
scripts/: adzuna_data_process.py  data_pipeline.py
workflows/: adzuna_s3_workflow.py
